--- a/app/static/css/quizpage-base.css
+++ b/app/static/css/quizpage-base.css
@@ -126,10 +126,6 @@ body {
     color: red;
 }
 
-.icon-sidebar {
-    margin: -7px 0 0 -13px;
-}
-
 #theoryOverlay td {
     padding: 5px 20px;
 }
